--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Adharsh Suresh </h1>
             <h2>Web Developer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/adiada/resume/raw/main/Adharsh_Resume_updated.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
