Added some changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="lead-content">
             <h1>Adharsh Suresh </h1>
             <h2>Web Developer</h2>
-            <a href="https://github.com/adiada/resume/raw/main/Adharsh_Resume_updated.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/adiada/resume/raw/main/Adharsh_Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -192,7 +192,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/todo.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -201,7 +201,7 @@
                             Todo List App is a simple application that enables the user to list
                             their tasks. It is implemented using the MVC modality. It is based mainly on NodeJS as server and uses MongoDB as database. It utilizes Express framework for routing and AWS Lambda for hosting the app. It uses EJS for templating and CSS for styling. 
                         </p>
-                        <a href="https://github.com/adiada/Todo-List-App.git" target="_blank"  rel="noopener noreferrer">View Project</a>
+                        <a href="https://mern-todo-list-application.herokuapp.com/todo" target="_blank"  rel="noopener noreferrer">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -223,8 +223,14 @@
             <li class="icons" ><i class="devicon-jamstack-original colored"></i></li>&nbsp;&nbsp;
             <li class="icons" ><i class="devicon-heroku-plain colored"></i></li>&nbsp;&nbsp;
             <li class="icons" ><i class="devicon-amazonwebservices-original colored"></i></li>&nbsp;&nbsp;
+            <br>
             <li class="icons" ><i class="devicon-jamstack-original colored"></i></li>&nbsp;&nbsp;
-            <li class="icons" ><i class="devicon-jamstack-original colored"></i></li>&nbsp;&nbsp;
+            <li class="icons" ><i class="devicon-html5-plain-wordmark colored"></i></li>&nbsp;&nbsp;
+            <li class="icons" ><i class="devicon-css3-plain-wordmark colored"></i></li>&nbsp;&nbsp;
+            <li class="icons" ><i class="devicon-npm-original-wordmark colored"></i></li>&nbsp;&nbsp;
+            <li class="icons" ><i class="devicon-postgresql-plain colored"></i></li>&nbsp;&nbsp;
+            <li class="icons" ><i class="devicon-vscode-plain colored"></i></li>&nbsp;&nbsp;
+            <li class="icons" ><i class="devicon-yarn-plain colored"></i></li>&nbsp;&nbsp;
             <br>
             <li class="skills">Javascript</li>
             <li class="skills">ES6</li>
@@ -297,7 +303,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 YOUR NAME
+                        Copyright &copy; 2020 ADHARSH SURESH
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -308,23 +314,23 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/adiada" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
+                        </li> -->
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://linkedin.com/in/adharshsuresh369" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
+                        </li> -->
+                        <!-- <li>
                             <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
