:sparkles: Added new project to the portfolio

--- a/index.html
+++ b/index.html
@@ -156,6 +156,24 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/chatapp.PNG" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Realtime Chat App</h3>
+                        <p>
+                            Real time chat App is a simple application for chatting personally or for multiple people in a common chat room . It is based mainly on NodeJS, Express and Socket.io server for backend and
+                            is hosted on heroku. It uses ReactJS and Socket.io client for frontend which is hosted on netlify. 
+                        </p>
+                        <a href="https://rs-chat-app.netlify.app/" target="_blank"  rel="noopener noreferrer">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/friendlist.PNG" />
@@ -168,6 +186,24 @@
                             is hosted on heroku. It uses ReactJS for frontend which is hosted on netlify. 
                         </p>
                         <a href="https://mern-friendslist.netlify.app/" target="_blank"  rel="noopener noreferrer">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/todo.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Todo List App</h3>
+                        <p>
+                            Todo List App is a simple application that enables the user to list
+                            their tasks. It is implemented using the MVC modality. It is based mainly on NodeJS as server and uses MongoDB as database. It utilizes Express framework for routing and AWS Lambda for hosting the app. It uses EJS for templating and CSS for styling. 
+                        </p>
+                        <a href="https://mern-todo-list-application.herokuapp.com/todo" target="_blank"  rel="noopener noreferrer">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -190,22 +226,7 @@
                 </div>
                 <!-- End .project -->
 
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/todo.png" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Todo List App</h3>
-                        <p>
-                            Todo List App is a simple application that enables the user to list
-                            their tasks. It is implemented using the MVC modality. It is based mainly on NodeJS as server and uses MongoDB as database. It utilizes Express framework for routing and AWS Lambda for hosting the app. It uses EJS for templating and CSS for styling. 
-                        </p>
-                        <a href="https://mern-todo-list-application.herokuapp.com/todo" target="_blank"  rel="noopener noreferrer">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
+                
 
             </div>
         </div>
