:memo: Added socketio

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <li class="icons" ><i class="devicon-nodejs-plain colored"></i></li>&nbsp;&nbsp;
             <li class="icons" ><i class="devicon-express-original-wordmark colored"></i></li>&nbsp;&nbsp;
             <li class="icons" ><i class="devicon-mongodb-plain colored"></i></li>&nbsp;&nbsp;
-            <li class="icons" ><i class="devicon-jamstack-original colored"></i></li>&nbsp;&nbsp;
+            <li class="icons" ><i class="devicon-socketio-original colored"></i></li>&nbsp;&nbsp;
             <li class="icons" ><i class="devicon-heroku-plain colored"></i></li>&nbsp;&nbsp;
             <li class="icons" ><i class="devicon-amazonwebservices-original colored"></i></li>&nbsp;&nbsp;
             <br>
@@ -260,6 +260,7 @@
             <li class="skills">EJS Templates</li>
             <li class="skills">Express</li>
             <li class="skills">MongoDB</li>
+            <li class="skills">SocketIO</li>
             <li class="skills">HTML</li>
             <li class="skills">CSS</li>
             <li class="skills">CSS 3</li> 
